# python-uv-new

./: README.md  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yml
app/: __init__.py  database.py
app/routers/: __init__.py  auth.py
