[project]
name = "python-uv-newone"
version = "0.1.0"
description = "FastAPI app scaffold using uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.9",
  "email-validator>=2.1",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8",
]


